Code Base/objects/Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Quantity__c</fullName>
        <label>Expected Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Name__c</fullName>
        <label>Prospect Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Stage__c</fullName>
        <label>Prospect Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Deal Won</fullName>
                </value>
                <value>
                    <fullName>Deal Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prospect_Name__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Prospect_Stage__c</columns>
        <columns>Expected_Quantity__c</columns>
        <columns>Expected_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PID - {0000}</displayFormat>
        <label>Prospect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>